# ffxiv-crafter

./: .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  _headers  app-browse.js  app-render.js  app-solve.js  app.js  crafting-list.js  index.html  robots.txt  sitemap.xml  styles.css  worker.js
data/: craft-actions.json  ingredients.json  items.json  meals.json  medicine.json  recipe_levels.json  recipes.json
docs/: BACKLOG.md
docs/health-reviews/: 2026-07-04-crafter-fix-plan.md  2026-07-04-crafter-health-review.md  2026-07-11-R2複檢-health-review.md  _INDEX.md
pkg/: crafter_wasm.d.ts  crafter_wasm.js  crafter_wasm_bg.wasm  crafter_wasm_bg.wasm.d.ts  package.json
tools/: build-data.py  check-actions.py  serve.py  test-formulas.mjs
wasm/: Cargo.toml
wasm/src/: lib.rs
